added: graphql query

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,36 @@
-td,th{
-    padding-left:25px;
+td,
+th {
+    padding-left: 25px;
     font-weight: bolder;
 }
-th{
+
+th {
     color: white;
+}
+
+h4 {
+    font-weight: bolder;
+}
+
+/* button{
+    float:center;
+    color:white;
+    font-weight: bolder;
+    font-size: 18px;
+    border:none;
+    padding: 10px 24px;
+} */
+button {
+    background-color: white;
+    color: #d9534f;
+    border: 2px solid #d9534f;
+    font-size: 18px;
+    font-weight: bolder;
+    padding: 0px 10px 0px 10px;
+    margin-top:5px
+}
+
+button:hover {
+    background-color: #d9534f;
+    color: white
 }
