--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
+<div class="container" style="margin-top:20px">
+  <form>
+    <div class="form-group">
+      <h4 class="bg-light" style="color:#d9534f">Search By ID :-</h4>
+      <div class="row">
+        <div class="col-md-8">
+          <input type="number" name="serachbyid" class="form-control" id="searchbyid" placeholder="" size="200px"
+            [(ngModel)]="selectedId" style="float:center">
+        </div>
+        <div class="col-md-4">
+          <button (click)="searchById()" class="">Search</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+
 <table class="table table-striped table-responsive" style="width:100%;text-align: center;">
   <thead>
     <tr class="bg-danger">
@@ -12,7 +29,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let user of allusers.users">
+    <tr *ngFor="let user of allusers">
       <td scope="row">{{user.id}}</td>
       <td>{{user.name}}</td>
       <td>{{user.email}}</td>
