--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h4 class="bg-light" style="color:#d9534f">Search By ID :-</h4>
       <div class="row">
         <div class="col-md-8">
-          <input type="number" name="serachbyid" class="form-control" id="searchbyid" placeholder="" size="200px"
+          <input type="number" name="" class="form-control" id="searchbyid" placeholder="" size="200px"
             [(ngModel)]="selectedId" style="float:center">
         </div>
         <div class="col-md-4">
@@ -13,8 +13,29 @@
       </div>
     </div>
   </form>
+  <br>
+  <h4 class="bg-light" style="color:#d9534f">Create User :-</h4>
+  <form>
+    <div class="form-group">
+      <input type="text" name="" class="form-control" id="" placeholder="Enter Name" size="200px" style="float:center">
+      <br>
+      <div class="row">
+        <div class="col-md-8">
+          <input type="text" name="" class="form-control" id="" placeholder="Enter Email" size="200px"
+            style="float:center">
+        </div>
+        <div class="col-md-4">
+          <input type="number" name="" class="form-control" id="" placeholder="Enter Age" size="200px"
+            style="float:center">
+        </div>
+      </div>
+      <br>
+      <input type="text" name="" class="form-control" id="" placeholder="Enter Nationality" size="200px"
+        style="float:center">
+    </div>
+  </form>
 </div>
-
+<br>
 <table class="table table-striped table-responsive" style="width:100%;text-align: center;">
   <thead>
     <tr class="bg-danger">
