--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,5 @@
 td,
 th {
-    padding-left: 25px;
     font-weight: bolder;
 }
 
@@ -12,14 +11,10 @@ h4 {
     font-weight: bolder;
 }
 
-/* button{
-    float:center;
-    color:white;
-    font-weight: bolder;
-    font-size: 18px;
-    border:none;
-    padding: 10px 24px;
-} */
+.shadow {
+    box-shadow: 5px 10px 18px #888888
+}
+
 button {
     background-color: white;
     color: #d9534f;
@@ -27,10 +22,26 @@ button {
     font-size: 18px;
     font-weight: bolder;
     padding: 0px 10px 0px 10px;
-    margin-top:5px
+    margin-top: 5px
 }
 
 button:hover {
     background-color: #d9534f;
     color: white
+}
+
+th:hover {
+    color: black
+}
+
+.shadow th:hover {
+    color: #d9534f
+}
+
+td:hover {
+    color: #d9534f
+}
+
+h4:hover {
+    color: #d9534f
 }
