--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top:20px">
   <form>
     <div class="form-group">
-      <h4 class="bg-light" style="color:#d9534f">Search By ID :-</h4>
+      <h4 class="bg-light">Search By ID :-</h4>
       <div class="row">
         <div class="col-md-8">
           <input type="number" name="searchbyid" class="form-control" id="searchbyid" placeholder="" size="200px"
@@ -14,8 +14,8 @@
     </div>
   </form>
   <br>
-  <h4 class="bg-light" style="color:#d9534f">Create User :-</h4>
-  <form #createUserForm="ngForm" (ngSubmit)="onSubmit(createUserForm)">
+  <h4 class="bg-light">Create User :-</h4>
+  <form #createUserForm="ngForm" (ngSubmit)="onSubmit(createUserForm)" autocomplete="off">
     <div class="form-group">
       <input type="text" name="name" class="form-control" id="" placeholder="Enter Name" size="200px"
         style="float:center" ngModel>
@@ -38,82 +38,84 @@
     </div>
   </form>
 </div>
-<table class="table table-striped table-responsive" style="width:100%;text-align: center;">
-  <thead>
-    <tr class="bg-danger">
-      <th scope="col">Id</th>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Age</th>
-      <th scope="col">Nationality</th>
-      <th scope="col">Friends</th>
-      <th scope="col">Fav Movie</th>
-      <th scope="col">Fav Book</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let user of allusers">
-      <td scope="row">{{user.id}}</td>
-      <td>{{user.name}}</td>
-      <td>{{user.email}}</td>
-      <td>{{user.age}}</td>
-      <td>{{user.nationality}}</td>
-      <td>
-        <table class="table table-striped table-responsive" style="width:100%">
-          <thead>
-            <tr class="bg-dark">
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col">Email</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let friend of user.friends;let i = index">
-              <td>{{friend.id}}</td>
-              <td>{{friend.name}}</td>
-              <td>{{friend.email}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-      <td>
-        <table class="table table-striped table-responsive" style="width:100%">
-          <thead>
-            <tr class="bg-dark">
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col">Year</th>
-              <th scope="col">InTheater</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let movie of user.favoritemovies;let i  = index">
-              <td>{{movie.id}}</td>
-              <td>{{movie.name}}</td>
-              <td>{{movie.year}}</td>
-              <td>{{movie.inTheater}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-      <td>
-        <table class="table table-striped table-responsive" style="width:100%">
-          <thead>
-            <tr class="bg-dark">
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col">Author</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let book of user.favoritebooks;let i  = index">
-              <td>{{book.id}}</td>
-              <td>{{book.name}}</td>
-              <td>{{book.author}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <table class="table table table-responsive" style="text-align: center;">
+    <thead>
+      <tr class="bg-danger">
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Age</th>
+        <th scope="col">Nationality</th>
+        <th scope="col">Friends</th>
+        <th scope="col">Favorite Movie</th>
+        <th scope="col">Favorite Book</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of allusers">
+        <td scope="row">{{user.id}}</td>
+        <td>{{user.name}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.age}}</td>
+        <td>{{user.nationality}}</td>
+        <td>
+          <table class="table table table-responsive shadow" style="width:100%">
+            <thead>
+              <tr class="bg-dark">
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let friend of user.friends;let i = index">
+                <td>{{friend.id}}</td>
+                <td>{{friend.name}}</td>
+                <td>{{friend.email}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <table class="table table table-responsive shadow" style="width:100%">
+            <thead>
+              <tr class="bg-dark">
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">Year</th>
+                <th scope="col">InTheater</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let movie of user.favoritemovies;let i  = index">
+                <td>{{movie.id}}</td>
+                <td>{{movie.name}}</td>
+                <td>{{movie.year}}</td>
+                <td>{{movie.inTheater}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <table class="table table table-responsive shadow" style="width:100%">
+            <thead>
+              <tr class="bg-dark">
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">Author</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let book of user.favoritebooks;let i  = index">
+                <td>{{book.id}}</td>
+                <td>{{book.name}}</td>
+                <td>{{book.author}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
