--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,6 @@
-td,
-th {
-    font-weight: bolder;
-}
 
 th {
     color: white;
-}
-
-h4 {
-    font-weight: bolder;
-}
-
-.shadow {
-    box-shadow: 5px 10px 18px #888888
 }
 
 button {
@@ -20,7 +8,7 @@ button {
     color: #d9534f;
     border: 2px solid #d9534f;
     font-size: 18px;
-    font-weight: bolder;
+    /* font-weight: bolder; */
     padding: 0px 10px 0px 10px;
     margin-top: 5px
 }
@@ -43,5 +31,9 @@ td:hover {
 }
 
 h4:hover {
+    color: #d9534f
+}
+
+input {
     color: #d9534f
 }
